k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: poe-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: do-issuer
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - app.poe.engineer
    secretName: app.poe.engineer-tls
  rules:
  - host: app.poe.engineer
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: poe-service
            port:
              number: 3000
